# no-tickets

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  dist-workspace.toml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml  release.yml  sync-cli-docs.yml
.tiny-brain/: analysis.json  config.json  sessions.json
.tiny-brain/fixes/: cli-wire-status-token.md  client-drop-api-prefix.md  cross-platform-cli-binary.md  delete-legacy-client.md  implement-adr-0002-cli-surface.md  init-wait-ergonomics.md  nt-cli-thin-edge-refactor.md  progress.json  publish-shared-surfaces.md  publish-spike-staging-smoke.md  qip-code-quality.md  qip-security.md  quick-quality-fixes.md  schema-domain-rename.md  tinybrain-pipeline-upgrades.md  wire-init-command.md
.tiny-brain/progress/: client-event-repository-adoption.json  event-actor-metadata.json  no-tickets-client.json  pnpm-migration.json
.tiny-brain/reviews/adversarial/: 09ee6de.json  0d2e6a4.json  2e64b37.json  400255a.json  42b413f.json  4aecdb2.json  5e943fe.json  9f6f7be.json  cc225fb.json  e9b9517.json
.tiny-brain/reviews/mutation/: a42fe8d.json
.tiny-brain/tech/: config.json
crates/nt-cli/: Cargo.toml
crates/nt-cli/src/: actor.rs  atomic_write.rs  auth.rs  auth_server.rs  clock.rs  config.rs  credentials.rs  env.rs  error.rs  hint.rs  home.rs  main.rs  paths.rs  session.rs  source_detect.rs  state.rs  status.rs  transport.rs  urls.rs
crates/nt-cli/src/commands/: init.rs  logout.rs  mod.rs  publish.rs  publish_batch.rs  self_update.rs  session.rs  status.rs  token_add.rs  token_list.rs  token_remove.rs  update.rs  validate.rs
crates/nt-cli/src/commands/internal/: generate_docs.rs  mod.rs
crates/nt-cli/src/commands/publish/: envelope.rs  metadata.rs  post.rs
crates/nt-cli/src/commands/publish_batch/: envelope.rs  jsonl.rs  source.rs
crates/nt-cli/tests/: actor-resolution.rs  generate-docs.rs  publish.rs  session.rs  status.rs  structured_errors.rs  validate.rs
crates/nt-cli/tests/mcp/: common.rs  describe_event_type.rs  list_event_types.rs  publish_event.rs
crates/nt-cli/tests/publish/: auth.rs  batch.rs  common.rs  error_handling.rs  happy_path.rs  metadata.rs  retry.rs
crates/nt-cli/tests/snapshots/: init.mdx  logout.mdx  publish.mdx  session.mdx  status.mdx  token.mdx  update.mdx  validate.mdx
crates/nt-cli/tests/snapshots/session/: end.mdx  show.mdx  start.mdx
crates/nt-cli/tests/snapshots/token/: add.mdx  list.mdx  remove.mdx
crates/nt-cli/tests/structured_errors/: common.rs  publish.rs  update.rs  validate.rs
crates/nt-core/: Cargo.toml
crates/nt-core/src/: encoding.rs  error.rs  http.rs  lib.rs  url.rs
crates/nt-mcp/: Cargo.toml
crates/nt-mcp/src/: config.rs  error_map.rs  example_synth.rs  fixtures.rs  lib.rs  main.rs  registry_cache.rs  server.rs
crates/nt-mcp/src/tools/: describe_event_type.rs  list_event_types.rs  mod.rs  publish_event.rs  run_interaction.rs
crates/nt-mcp/tests/: mcp.rs
crates/nt-mcp/tests/mcp/: common.rs  describe_event_type.rs  list_event_types.rs  publish_event.rs
crates/nt-schemas/: Cargo.toml  build.rs
crates/nt-schemas/schemas/: event-types.bundle.json
crates/nt-schemas/src/: lib.rs
crates/nt-schemas/tests/: metadata.rs  validate.rs
docs/: binary-error-contract.md  cli-reference.md  install.md  rust-spike-notes.md
docs/adr/: 0001-schema-source-of-truth-and-discovery.md  0002-cli-surface-and-token-lifecycle.md  0003-typescript-sdk-phase-4-survival.md
docs/cookbook/: actor-resolution.md
docs/fixes/: branch-protection.md  cli-reference-generation.md  cli-wire-status-token.md  client-drop-api-prefix.md  cross-platform-cli-binary.md  deb-rpm-packaging.md  deferred-server-coordination.md  event-actor-metadata-client.md  extract-read-notickets-dir.md  headless-init-device-code.md  implement-adr-0002-cli-surface.md  publish-shared-surfaces.md  publish-spike-staging-smoke.md  publish-uses-push-token.md  schema-domain-rename.md  self-update-broken-on-tar-xz.md  stream-mode.md  testing-hygiene.md  wire-init-command.md
docs/prd/client-event-repository-adoption/: prd.md
docs/prd/event-actor-metadata/: prd.md
docs/prd/no-tickets-client/: prd.md
infra/get-no-tickets/: README.md  wrangler.toml
scripts/: generate-schema-bundle.mjs  seed-product-demo.sh  smoke-publish.ts
sdk/: eslint.config.js  package.json  pnpm-lock.yaml  stryker.config.mjs  tsconfig.json  vitest.config.ts
skills/: break-down.md  create-epic.md  create-feature.md  create-fix.md  create-task.md  update-progress.md
src/: agent-detect.ts  cli.ts  client.ts
src/__tests__/: agent-detect.test.ts  auth-e2e.test.ts  cli.test.ts  client.test.ts  exports.test.ts  init-cli-e2e.test.ts  init.test.ts  mcp-e2e.test.ts  project-cli-e2e.test.ts  publish-cli-e2e.test.ts  push-e2e.test.ts  source-detect.test.ts  status-e2e.test.ts  token-cli-e2e.test.ts  token-e2e.test.ts  validate-e2e.test.ts
src/commands/: init-auth.ts  init.ts  push-auth.ts  push.ts  task-update.test.ts  task-update.ts  token.ts  validate.ts
src/core/: diff.ts  event.ts  fs.ts  index.ts  interaction.ts  parser.ts  schemas.ts  source.ts  state.ts  subject.ts  type-id.ts  types.ts
src/lib/: example-synth.test.ts  example-synth.ts
src/mcp/: create-server.ts  discovery.ts
src/registry/: cache.test.ts  cache.ts  client.test.ts  client.ts  index.test.ts  index.ts  refresh.test.ts  refresh.ts  staleness.test.ts  staleness.ts
src/sdk/: api-client.ts  auth-server.ts  auth.ts  credentials.ts  projects.ts  url-resolver.ts
src/transport/: client.test.ts  client.ts  errors.test.ts  errors.ts  events.test.ts  events.ts  interactions.test.ts  interactions.ts  subjects.test.ts  subjects.ts
templates/: epic.md  feature.md  fix.md
wrappers/chatgpt/: app-manifest.json  gpt-instructions.md  mcp.json
wrappers/claude-code/: README.md  hooks.json
wrappers/claude-desktop/: build-mcpb.sh  manifest.json
wrappers/continue/: block.yaml
wrappers/copilot/: mcp.json
wrappers/cursor/: .mcp.json
(+150 files in other folders)
