[workspace]
members = ["crates/nt-cli", "crates/nt-core", "crates/nt-mcp", "crates/nt-schemas"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/magic-ingredients/no-tickets"
homepage = "https://no-tickets.com"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
