[package]
name = "nt-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "no-tickets CLI — Rust port (Phase 2/3 of cross-platform-cli-binary fix)"

# Cargo package stays `nt-cli` (the `nt` name on crates.io is taken;
# `no-tickets` rename is a Task 8 / Task 13 decision). The homebrew
# formula is independently namespaced — overriding it to `nt` means
# `brew install magic-ingredients/tap/nt` works as the fix doc requires
# even while the cargo package keeps the longer name.
[package.metadata.dist]
formula = "nt"

[[bin]]
name = "nt"
path = "src/main.rs"

[[bin]]
name = "nt-mcp"
path = "src/bin/nt-mcp.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
hostname = "0.4"
nt-mcp = { path = "../nt-mcp" }
nt-schemas = { path = "../nt-schemas" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "sync", "time"] }
wiremock = "0.6"
