[package]
# Cargo package name `no-tickets` matches the product name across every
# distribution channel: `cargo install no-tickets`,
# `brew install magic-ingredients/tap/no-tickets`,
# `curl … no-tickets-installer.sh | sh`,
# tarballs `no-tickets-{target}.tar.xz`. The daily-use binary stays
# `nt` (short, type-friendly) — see the `[[bin]]` below.
# Chose `no-tickets` over `nt` because `nt` is taken on crates.io
# (unrelated NetworkTables crate) and one unified name across all
# channels beats a divergence-only-on-crates.io split.
name = "no-tickets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "no-tickets CLI — Rust port (Phase 2/3 of cross-platform-cli-binary fix)"

[[bin]]
name = "nt"
path = "src/main.rs"

[[bin]]
name = "nt-mcp"
path = "src/bin/nt-mcp.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
hostname = "0.4"
nt-mcp = { path = "../nt-mcp" }
nt-schemas = { path = "../nt-schemas" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "sync", "time"] }
wiremock = "0.6"
