[package]
# Cargo package name `no-tickets` matches the product name across every
# distribution channel and the daily-use binary. The original Rust spike
# shipped a short `nt` binary; that was reversed before going public —
# one product name everywhere (CLI invocation, brew formula, install
# script, crates.io) beats the cognitive overhead of `nt-vs-no-tickets`.
# Binary is `no-tickets`; the MCP server is `no-tickets-mcp`.
name = "no-tickets"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "no-tickets CLI — Rust port (Phase 2/3 of cross-platform-cli-binary fix)"

[[bin]]
name = "no-tickets"
path = "src/main.rs"

[[bin]]
name = "no-tickets-mcp"
path = "src/bin/nt-mcp.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
hostname = "0.4"
nt-mcp = { path = "../nt-mcp" }
nt-schemas = { path = "../nt-schemas" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
# Archive features are load-bearing: cargo-dist publishes Unix targets as
# `.tar.gz` and Windows targets as `.zip` (see dist-workspace.toml's
# `unix-archive` setting). Without `archive-tar` + `compression-flate2`
# the crate has no way to extract a `.tar.gz` — it silently writes the
# raw archive to the binary path. Same for `archive-zip` on Windows.
# `rustls` keeps us off OpenSSL for the GH Releases HTTPS fetch.
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "compression-flate2", "archive-zip"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "sync", "time"] }
wiremock = "0.6"
