[package]
name = "nt-core"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "no-tickets shared HTTP / URL / encoding primitives — consumed by nt-cli and nt-mcp"

[dependencies]
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
