[package]
name = "nt-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "no-tickets MCP server — Rust port (Phase 2/3 of cross-platform-cli-binary fix)"

[[bin]]
name = "nt-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
nt-schemas = { path = "../nt-schemas" }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
rmcp = { version = "1.6", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time"] }
wiremock = "0.6"
