[package]
name = "nt-schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "no-tickets event-type schemas bundle + Rust validator (Phase 2/3 of cross-platform-cli-binary fix)"

[dependencies]
jsonschema = { version = "0.46", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# serde_json is already in [dependencies]; tests inherit it.
[dev-dependencies]
